0.10.3
- fixed display problems when using odd window sizes
- loading image data earlier so that no unhandled exceptions will be thrown
  when a file is broken
- fixed typo in --aspect parameter
- using -u doesn't periodically re-load the input file any longer if it changed
  only once
- fixed a bunch of problems related to non-standard aspect ratios

0.10.2 [2008-02-03]
- --listtrans now shows which transitions are enabled by default
- number of digits in pdftoppm output file names is cached
- using xrandr to get current resolution on X11
- enabled URL hyperlinks using ShellExecute (Win32) or fd.o's xdg-open (UNIX)
- 'keys' PageProp for arbitrary key bindings
- exceptions in info scripts are now non-fatal
- 'video' PageProp and PlayVideo() function for (HIGHLY EXPERIMENTAL!!!)
  fullscreen video playback
- PDF parser now emits warnings instead of failing silently if something
  isn't OK
- support for list files using the @filename syntax
- 'comment' PageProp displays overlay text on a slide permanently
- added auto-overview mode (idea by Tobias Maier)
- restore compatibility with KeyJnoteGUI


0.10.1a [2007-11-27]
- restored compatibility with poppler-based pdftoppm
- added Alt+Tab as alias for "exit fullscreen mode"
- improved cleanup code


0.10.1 [2007-09-09]
- re-enabled GL_ARB_texture_non_power_of_two support (was broken in 0.10.0)
- PDF hyperlink support
- added compatibility fix for PyOpenGL 3.x
- generalized and simplified PageProp system
- rotate PageProp
- multi-file support
- persistent cache


0.10.0 [2007-06-02]
- added pdftoppm rendering backend
- overview page update fix
- more font search paths (DejaVuSans.ttf, OSX paths)
- graceful handling of failed renders
- converted logo to PNG
- fixed -T0 crash
- allowed None as a value for the 'transition' PageProp and -t parameter
- added 'transtime' PageProp to set transition duration for single pages
- R key: reset timer
- added 'progress' PageProp to show/hide progress bar