@@ -6,6 +6,7 @@
 - using -u doesn't periodically re-load the input file any longer if it changed
   only once
 - fixed a bunch of problems related to non-standard aspect ratios
+- adjustable zoom factor
 
 0.10.2 [2008-02-03]
 - --listtrans now shows which transitions are enabled by default
